#568218: Links to clone, export, delete/revert, enable/disable variants from the main summary page were incorrect and led to an operation trail not found message.
#533724: Prevent Panels from upgrading while uninstalled, as that upgrades into broken pages.
#529816: Allow flexible layout to add custom classes to each region.

Panels 6.x-3.0
==============

#529258 by stella: Attempting to modify CSS properties on mini panel causes ajax failure.
#537430 by dereine: Fix untranslatable strings in panels dashboard template.
#530104 by stella: Fix import problem with mini panels.
#535606: Mini panel deletion deleted all block config of all mini panels.
#539418 by esmerel: Remove reference to panel page from module description.
#535722: Fix incorrect "title" tag on categories in add content modal.
Fix a bug with drag and drop UI that caused panes to break after other panes were added.
#538900: Fix bug with flexible when having multiple regions of the same name if they have a space.
#552014: Hide Substitutions fieldset if there are no contexts.
#552006: Add Content modal now opens to explanatory text instead of the first category.
#553392 by lee20: Fix node allowed layouts not properly respected on edit layout screen.

Panels 6.x-3.0-rc1
==================

#515316: Add permission to view Panels admin dashboard.
#298174: Recursion defense for mini panels.
#502670: Extra HTML designed only for flexible layout admin accidentally rendered.
#507516: "Default" panel style on regions not being properly utilized.
#476440: Seriously, cloning variants really realy fixed.
#518360 by joshk: Panels node form doesn't have format properly associated.
#525340 by markus_petrux: Dashboard improperly initializing a variable.
#460902 by dmmckenna: Fix problem installing panels from an install profile.
#488278: Preview on panel nodes prior to creation caused errors.
#475920: Create "use panels dashboard" permission to more easily control who can and cannot use it.