@@ -1,5 +1,5 @@
 <?php
-// $Id: panels_mini.module,v 1.5.2.15 2009/08/03 22:08:42 merlinofchaos Exp $
+// $Id: panels_mini.module,v 1.5.2.16 2009/10/07 22:20:29 merlinofchaos Exp $
 
 /**
  * @file panels_mini.module
@@ -61,26 +61,21 @@ function panels_mini_block($op = 'list', $delta = 0, $edit = array()) {
     if (!empty($viewing[$delta])) {
       return;
     }
+    ctools_include('context');
 
     $viewing[$delta] = TRUE;
     $panel_mini = panels_mini_load($delta);
-    ctools_include('context');
     $panel_mini->context = $panel_mini->display->context = ctools_context_load_contexts($panel_mini);
     $panel_mini->display->css_id = panels_mini_get_id($panel_mini->name);
 
-    $title = $panel_mini->title;
-    // If the hide title flag is set, just remove the title altogether.
-    if (!empty($panel_mini->display->hide_title)) {
-      $title = '';
-    }
-    else if (!empty($panel_mini->display->title)) {
-      $title = filter_xss_admin(ctools_context_keyword_substitute($panel_mini->display->title, array(), $panel_mini->context));
-    }
+    $block = array();
 
-    $block = array(
-      'subject' => $title,
-      'content' => panels_render_display($panel_mini->display),
-    );
+    $block['content'] = panels_render_display($panel_mini->display);
+    $block['title'] = panels_display_get_title($panel_mini->display);
+    // If NULL, fall back to this title:
+    if (!isset($block['title'])) {
+      $block['title'] = $panel_mini->title;
+    }
 
     unset($viewing[$delta]);
     return $block;
